--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.1",
     "@prisma/client": "^4.5.0",
     "@types/cors": "^2.8.12",
     "class-transformer": "^0.5.1",
