--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "prop-types": "^15.8.1",
     "reflect-metadata": "^0.1.13",
