--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # remote database
-# DATABASE_URL="mysql://freedb_user_plant_shop:ztVPDj2C3*qCc4k@sql.freedb.tech/freedb_plant_shop_db"
+DATABASE_URL="mysql://freedb_user_plant_shop:ztVPDj2C3*qCc4k@sql.freedb.tech/freedb_plant_shop_db"
 
-DATABASE_URL="mysql://root:Monstera23.@localhost:3306/plant_shop_db"
+# DATABASE_URL="mysql://root:Monstera23.@localhost:3306/plant_shop_db"
 JWT_SECRET="asobplantshop123123"
